[package]
name = "evm-fuzz-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
env_logger = "0.10.0"
ethabi = "18.0.0"
libfuzzer-sys = "0.4"

[dependencies.evm_fuzz]
path = "../evm_fuzz/"

# Prevent this from interfering with workspaces
# [workspace]
# members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
